--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,8 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
   width: 100%;
   height: 100%;
 }
-.main-slide .slide-img img {
+.main-slide .slide-img img,
+.main-slide .slide-img video {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
