--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,21 @@ ul {
   list-style: none;
 }
 
+select {
+  background-image: url(../images/icons/selectArr.svg);
+  background-repeat: no-repeat;
+  background-size: 15px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+html[dir=rtl] select {
+  background-position: left 14px top 50%;
+}
+html[dir=ltr] select {
+  background-position: right 14px top 50%;
+}
+
 @font-face {
   font-family: "ping";
   src: url("../fonts/ping/PingARLT-Thin.woff2") format("woff2"), url("../fonts/ping/PingARLT-Thin.woff") format("woff"), url("../fonts/ping/PingARLT-Thin.ttf") format("truetype");
@@ -508,7 +523,8 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
 .category-item {
   padding: 20px 37px 45px;
   border-radius: 15px;
-  border-bottom: 5px solid #004185;
+  border: 1px solid #a5a5a5;
+  border-bottom: 6px solid #004185;
   background-color: #f7f7f7;
 }
 @media (max-width: 1199px) {
@@ -814,23 +830,109 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
 }
 
 .gallery-slider .swiper-slide {
+  height: auto;
+  display: flex;
+}
+
+.gallery-item {
+  aspect-ratio: 370/240;
+  width: 100%;
+  position: relative;
+  border-radius: 20px;
+  display: block;
+  overflow: hidden;
+}
+.gallery-item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+  opacity: 0;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 65, 133, 0.72) 0%, rgba(0, 65, 133, 0.36) 49.48%, rgba(0, 65, 133, 0.54) 100%);
+  transition: all 0.3s ease-in-out;
+}
+.gallery-item .gallery-statistics {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 17px 17px 0;
+  z-index: 3;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.gallery-item .gallery-statistics span {
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 500;
+}
+.gallery-item .gallery-statistics span img {
+  margin-inline-start: 5px;
+}
+.gallery-item .gallery-name {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 0 14px 14px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+  z-index: 3;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.gallery-item > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.3s ease-in-out;
+}
+.gallery-item:hover::before,
+.gallery-item:hover .gallery-statistics,
+.gallery-item:hover .gallery-name {
+  visibility: visible;
+  opacity: 1;
+}
+.gallery-item:hover > img {
+  transform: scale(1.2);
+}
+
+.videos-slider .swiper-slide {
   width: 352px;
 }
 @media (max-width: 767px) {
-  .gallery-slider .swiper-slide {
+  .videos-slider .swiper-slide {
     width: 100%;
   }
 }
-.gallery-slider .swiper-slide.swiper-slide-active {
+.videos-slider .swiper-slide.swiper-slide-active {
   width: 430px;
 }
 @media (max-width: 767px) {
-  .gallery-slider .swiper-slide.swiper-slide-active {
+  .videos-slider .swiper-slide.swiper-slide-active {
     width: 100%;
   }
 }
 
-.gallery-item {
+.video-item {
   aspect-ratio: 352/235;
   width: 100%;
   position: relative;
@@ -839,12 +941,12 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
   overflow: hidden;
 }
 @media (max-width: 767px) {
-  .gallery-item {
+  .video-item {
     aspect-ratio: 430/329;
     border-radius: 10px;
   }
 }
-.gallery-item::before, .gallery-item::after {
+.video-item::before, .video-item::after {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -854,26 +956,74 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
   z-index: 3;
   transition: all 0.3s ease-in-out;
 }
-.gallery-item.video:after {
+.video-item:after {
   content: url(../images/icons/play.svg);
 }
-.gallery-item::before {
+.video-item::before {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 65, 133, 0.3);
+  background: linear-gradient(180deg, rgba(0, 65, 133, 0.72) 0%, rgba(0, 65, 133, 0.36) 49.48%, rgba(0, 65, 133, 0.54) 100%);
 }
-.gallery-item img {
+.video-item .video-statistics {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 17px 17px 0;
+  z-index: 3;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.video-item .video-statistics span {
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 500;
+}
+.video-item .video-statistics span img {
+  margin-inline-start: 5px;
+}
+.video-item .video-name {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 0 14px 14px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+  z-index: 3;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.video-item > img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  transition: all 0.3s ease-in-out;
 }
-.gallery-item:hover::before, .gallery-item:hover::after {
+.video-item:hover::before, .video-item:hover::after,
+.video-item:hover .video-statistics,
+.video-item:hover .video-name {
   visibility: visible;
   opacity: 1;
 }
-.swiper-slide-active .gallery-item {
+.video-item:hover > img {
+  transform: scale(1.2);
+}
+.swiper-slide-active .video-item {
   aspect-ratio: 430/329;
 }
 
@@ -985,12 +1135,153 @@ html[dir=ltr] .contact-method .value {
   height: 100%;
   display: flex;
 }
-.contact-map img {
+
+.gm-ui-hover-effect {
+  inset: unset !important;
+  top: -5px !important;
+  inset-inline-end: -5px !important;
+}
+@media (max-width: 767px) {
+  .gm-ui-hover-effect > span {
+    background-color: #004185;
+  }
+}
+
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-d {
+  padding: 0 !important;
+  border-radius: 0 !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  overflow: hidden !important;
+  border-radius: 5px !important;
+  background-color: #fff !important;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.0588235294) !important;
+  max-height: none !important;
+}
+.gm-style .gm-style-iw-c {
+  max-width: none !important;
+}
+
+.map-branch {
+  width: 504px;
+  display: flex;
+  align-items: center;
+  padding: 18px 13px 13px;
+  padding-inline-end: 0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294);
+  border-radius: 10px;
+}
+@media (max-width: 767px) {
+  .map-branch {
+    flex-direction: column;
+    padding: 5px;
+    width: 205px;
+  }
+}
+.map-branch .branch-img {
+  width: 225.92px;
+  height: 123px;
+  border: 1px solid #eee;
+  border-radius: 10px;
+  padding: 0 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  overflow: hidden;
+}
+.map-branch .branch-img img {
   width: 100%;
-  -o-object-fit: 100%;
-     object-fit: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 767px) {
+  .map-branch .branch-img {
+    width: 100%;
+    height: auto;
+  }
+}
+.map-branch .branch-info {
+  padding-inline: 15px;
+}
+.map-branch span {
+  display: block;
+  font-size: 12px;
+  color: #666;
+  line-height: 1.833334;
+  margin-bottom: 3px;
+}
+.map-branch .branch-title {
+  font-size: 14px;
+  color: #1d1f1f;
+  font-weight: 400;
+  line-height: 1.5714;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin: 0 0 10px;
+}
+.map-branch .branch-tools {
+  padding: 10px 0 0;
+  border-top: 1px solid #eee;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.map-branch .branch-tools a {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.map-branch .branch-directions {
+  width: 140px;
+  color: #fff;
+  fill: #fff;
+  background-color: #004185;
+  font-size: 12px;
+  font-weight: 500;
+  border-end-end-radius: 15px;
+  border-start-start-radius: 15px;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 767px) {
+  .map-branch .branch-directions {
+    width: 100%;
+  }
+}
+.map-branch .branch-directions svg {
+  display: flex;
+  align-items: center;
+  margin-inline-end: 4px;
+}
+.map-branch .branch-directions:hover {
+  background-color: #3c8951;
+  fill: #fff;
+  color: #fff;
+}
+.map-branch .branch-phone {
+  width: 42px;
+  height: 42px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background-color: #3c8951;
+  fill: #fff;
+  transition: all 0.3s ease-in-out;
+}
+@media (max-width: 767px) {
+  .map-branch .branch-phone {
+    margin-inline-start: 5px;
+  }
+}
+.map-branch .branch-phone:hover {
+  background-color: #004185;
+  fill: #fff;
 }
 
 .lazy-img-parent img {
@@ -1307,7 +1598,7 @@ header {
   border-start-start-radius: 15px;
   background-color: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.0509803922);
-  width: 208px;
+  min-width: 215px;
   padding: 13px 0 19px;
   z-index: 5;
   visibility: hidden;
@@ -1324,7 +1615,13 @@ header {
 .nav-sublist li a {
   font-size: 16px;
   color: #444444;
+  white-space: nowrap;
   transition: all 0.3s ease-in-out;
+}
+@media (max-width: 1199px) {
+  .nav-sublist li a {
+    white-space: unset;
+  }
 }
 .nav-sublist li a:hover {
   color: #004185;
@@ -1471,6 +1768,7 @@ header {
     inset: unset;
     border-radius: 0;
     box-shadow: none;
+    min-height: auto;
     width: 100%;
     padding: 0 15px;
     visibility: visible;
@@ -1538,6 +1836,25 @@ header {
     margin-bottom: 35px;
   }
 }
+.section-head.news-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: start;
+  max-width: none;
+  margin-bottom: 20px;
+}
+@media (max-width: 993px) {
+  .section-head.news-head {
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 767px) {
+  .section-head.news-head {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 
 .section-title {
   display: flex;
@@ -1561,6 +1878,58 @@ header {
 @media (max-width: 993px) {
   .section-title {
     font-size: 24px;
+  }
+}
+.news-head .section-title {
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.news-head .section-title img {
+  margin: 0;
+  margin-inline-end: 15px;
+}
+@media (max-width: 767px) {
+  .news-head .section-title {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .news-head .section-title img {
+    margin: 0 0 7px;
+  }
+}
+
+.filter-content {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .filter-content {
+    width: 100%;
+    margin-top: 15px;
+  }
+}
+.filter-content .filter-label {
+  font-size: 16px;
+  font-weight: 400;
+  color: #444444;
+  margin: 0;
+  padding: 0;
+  margin-inline-end: 4px;
+  flex-shrink: 0;
+}
+.filter-content .filter-select {
+  padding: 0 16px;
+  font-size: 14px;
+  color: #444444;
+  font-weight: 400;
+  border: 2px solid #eee;
+  border-radius: 8px;
+  height: 48px;
+  width: 270px;
+}
+@media (max-width: 767px) {
+  .filter-content .filter-select {
+    width: 100%;
   }
 }
 
@@ -1716,14 +2085,18 @@ html[dir=ltr] .about-section .pattern {
 }
 
 .gallery-section {
-  padding: 80px 0 103px;
-  background-color: #fff;
+  padding: 108px 0 33px;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
+  width: 100%;
   overflow: hidden;
+  background-color: #fff;
+  background-position-x: center;
 }
 @media (max-width: 993px) {
   .gallery-section {
-    padding: 50px 0 60px;
+    padding: 50px 0 30px;
   }
 }
 .gallery-section .pattern {
@@ -1732,7 +2105,7 @@ html[dir=ltr] .about-section .pattern {
   transform: translateX(-50%);
 }
 .gallery-section .pattern.top {
-  top: 0;
+  top: 30px;
 }
 .gallery-section .pattern.bottom {
   bottom: 50px;
@@ -1743,10 +2116,38 @@ html[dir=ltr] .about-section .pattern {
   z-index: 2;
 }
 
-.gallery-slider .swiper {
+.videos-section {
+  padding: 80px 0 103px;
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+@media (max-width: 993px) {
+  .videos-section {
+    padding: 50px 0 60px;
+  }
+}
+.videos-section .pattern {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.videos-section .pattern.top {
+  top: 0;
+}
+.videos-section .pattern.bottom {
+  bottom: 50px;
+}
+
+.videos-content {
+  position: relative;
+  z-index: 2;
+}
+
+.videos-slider .swiper {
   overflow: unset;
 }
-.gallery-slider .swiper-wrapper {
+.videos-slider .swiper-wrapper {
   align-items: center;
 }
 
@@ -1977,15 +2378,16 @@ html[dir=ltr] .footer-list a:hover {
 }
 
 .last-footer {
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: space-between;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 18px 0;
 }
-@media (max-width: 767px) {
+@media (max-width: 993px) {
   .last-footer {
     padding: 15px;
-    flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     text-align: center;
   }
@@ -1998,6 +2400,28 @@ html[dir=ltr] .footer-list a:hover {
   line-height: 1.5;
   margin: 0;
 }
+.copyrights a {
+  color: #36f4d2;
+  transition: all 0.3s ease-in-out;
+}
+.copyrights a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+.copyrights:last-of-type {
+  text-align: end;
+}
+@media (max-width: 993px) {
+  .copyrights:last-of-type {
+    text-align: center;
+    margin-top: 15px;
+  }
+}
+@media (max-width: 993px) {
+  .copyrights {
+    order: 2;
+  }
+}
 
 .socials {
   display: flex;
@@ -2005,10 +2429,11 @@ html[dir=ltr] .footer-list a:hover {
   justify-content: center;
   gap: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 993px) {
   .socials {
     gap: 8px;
     margin-bottom: 15px;
+    order: 1;
   }
 }
 
