--- a/css/main.css
+++ b/css/main.css
@@ -466,6 +466,9 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
     margin-bottom: 15px;
   }
 }
+.page-content .about-summary {
+  display: block;
+}
 
 @media (max-width: 993px) {
   .about-btn {
@@ -1825,6 +1828,303 @@ header {
     color: #004185;
   }
 }
+.breadcrumb-section {
+  padding: 90px 15px 70px;
+  text-align: center;
+  background-position: top;
+  background-size: cover;
+  position: relative;
+}
+.breadcrumb-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(74.5deg, rgba(32, 158, 89, 0.8) 0.45%, rgba(16, 112, 111, 0.9) 50.22%, #004185 100%);
+}
+
+.page-title {
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  font-size: 34px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 0.588235;
+  margin: 0 0 30px;
+}
+.page-title img {
+  filter: brightness(0) invert(1);
+  margin-bottom: 30px;
+}
+
+.breadcrumb-list {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.breadcrumb-list li {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.333334;
+  color: #fff;
+}
+.breadcrumb-list li ~ li::before {
+  content: "/";
+  margin: 0 10px;
+}
+.breadcrumb-list a {
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.breadcrumb-list a:hover {
+  color: #fff;
+}
+
+footer {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+footer:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(74.5deg, rgba(32, 158, 89, 0.95) 0.45%, rgba(0, 65, 133, 0.95) 100%);
+}
+
+.footer {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 65px 0;
+}
+@media (max-width: 993px) {
+  .footer {
+    flex-wrap: wrap;
+    padding: 40px 0;
+  }
+}
+@media (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 0;
+  }
+}
+
+.footer-info {
+  margin: 15px 0 0;
+}
+@media (max-width: 993px) {
+  .footer-info {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+}
+
+.footer-logo {
+  width: 199px;
+  margin: 0 0 25px;
+}
+.footer-logo img {
+  max-width: 100%;
+}
+@media (max-width: 993px) {
+  .footer-logo {
+    margin: 0 auto 25px;
+  }
+}
+
+.footer-summary {
+  width: 270px;
+  font-size: 16px;
+  color: #eeeeee;
+  font-weight: 400;
+  line-height: 1.5;
+  margin: 0;
+}
+@media (max-width: 993px) {
+  .footer-summary {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.footer-nav {
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .footer-nav {
+    width: 100%;
+    margin: 0 0 40px;
+  }
+}
+
+.footer-title {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1.6;
+  margin: 0 0 30px;
+}
+@media (max-width: 767px) {
+  .footer-title {
+    margin: 0;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  .footer-title img {
+    display: none;
+  }
+  .footer-title:after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    font-size: 16px;
+    content: "\f107";
+    transition: transform 0.3s ease-in-out;
+  }
+  .footer-title.active:after {
+    transform: rotate(-180deg);
+  }
+}
+
+@media (max-width: 767px) {
+  .footer-list {
+    display: none;
+    padding: 15px 15px 0;
+  }
+}
+@media (min-width: 768px) {
+  .footer-list {
+    display: block !important;
+  }
+}
+.footer-list li {
+  line-height: 2.1333334;
+  font-size: 15px;
+}
+.footer-list li ~ li {
+  margin-top: 10px;
+}
+.footer-list a {
+  font-size: 15px;
+  color: #fff;
+  display: inline-flex;
+  transition: all 0.3s ease-in-out;
+}
+.footer-list a:hover {
+  color: #00af6c;
+  transform: translateX(-5px);
+}
+html[dir=ltr] .footer-list a:hover {
+  transform: translateX(5px);
+}
+
+.last-footer-content {
+  position: relative;
+  z-index: 2;
+  border-top: 1px solid rgba(248, 248, 248, 0.2);
+}
+
+.last-footer {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 18px 0;
+}
+@media (max-width: 993px) {
+  .last-footer {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+.copyrights {
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1.5;
+  margin: 0;
+}
+.copyrights a {
+  color: #36f4d2;
+  transition: all 0.3s ease-in-out;
+}
+.copyrights a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+.copyrights:last-of-type {
+  text-align: end;
+}
+@media (max-width: 993px) {
+  .copyrights:last-of-type {
+    text-align: center;
+    margin-top: 15px;
+  }
+}
+@media (max-width: 993px) {
+  .copyrights {
+    order: 2;
+  }
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+@media (max-width: 993px) {
+  .socials {
+    gap: 8px;
+    margin-bottom: 15px;
+    order: 1;
+  }
+}
+
+.social {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.social:hover {
+  background-color: #fff;
+  color: #3c8951;
+}
+
 .section-head {
   width: 100%;
   max-width: 930px;
@@ -2218,238 +2518,180 @@ html[dir=ltr] .about-section .pattern {
   }
 }
 
-footer {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  overflow: hidden;
-}
-footer:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(74.5deg, rgba(32, 158, 89, 0.95) 0.45%, rgba(0, 65, 133, 0.95) 100%);
-}
-
-.footer {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 65px 0;
+.inner-page .about-section {
+  padding: 100px 0;
 }
 @media (max-width: 993px) {
-  .footer {
-    flex-wrap: wrap;
+  .inner-page .about-section {
     padding: 40px 0;
   }
 }
-@media (max-width: 767px) {
-  .footer {
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-bottom: 0;
-  }
-}
 
-.footer-info {
-  margin: 15px 0 0;
+.features-section {
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  background-color: #fff;
+  background-position: top center;
+  padding: 120px 0 90px;
 }
 @media (max-width: 993px) {
-  .footer-info {
-    width: 100%;
-    margin-bottom: 40px;
+  .features-section {
+    padding: 40px 0;
   }
 }
-
-.footer-logo {
-  width: 199px;
-  margin: 0 0 25px;
-}
-.footer-logo img {
-  max-width: 100%;
-}
-@media (max-width: 993px) {
-  .footer-logo {
-    margin: 0 auto 25px;
-  }
+.features-section::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 27%;
+  background-color: #fff;
 }
 
-.footer-summary {
-  width: 270px;
-  font-size: 16px;
-  color: #eeeeee;
-  font-weight: 400;
-  line-height: 1.5;
-  margin: 0;
-}
-@media (max-width: 993px) {
-  .footer-summary {
-    width: 100%;
-    text-align: center;
-  }
-}
-
-.footer-nav {
-  margin: 0;
-}
-@media (max-width: 767px) {
-  .footer-nav {
-    width: 100%;
-    margin: 0 0 40px;
-  }
-}
-
-.footer-title {
+.statistics-list {
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  font-size: 20px;
-  font-weight: 700;
-  color: #fff;
-  line-height: 1.6;
-  margin: 0 0 30px;
-}
-@media (max-width: 767px) {
-  .footer-title {
-    margin: 0;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-  }
-  .footer-title img {
-    display: none;
-  }
-  .footer-title:after {
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
-    font-size: 16px;
-    content: "\f107";
-    transition: transform 0.3s ease-in-out;
-  }
-  .footer-title.active:after {
-    transform: rotate(-180deg);
-  }
-}
-
-@media (max-width: 767px) {
-  .footer-list {
-    display: none;
-    padding: 15px 15px 0;
-  }
-}
-@media (min-width: 768px) {
-  .footer-list {
-    display: block !important;
-  }
-}
-.footer-list li {
-  line-height: 2.1333334;
-  font-size: 15px;
-}
-.footer-list li ~ li {
-  margin-top: 10px;
-}
-.footer-list a {
-  font-size: 15px;
-  color: #fff;
-  display: inline-flex;
-  transition: all 0.3s ease-in-out;
-}
-.footer-list a:hover {
-  color: #00af6c;
-  transform: translateX(-5px);
-}
-html[dir=ltr] .footer-list a:hover {
-  transform: translateX(5px);
-}
-
-.last-footer-content {
+  justify-content: space-between;
+  padding-bottom: 62px;
   position: relative;
-  z-index: 2;
-  border-top: 1px solid rgba(248, 248, 248, 0.2);
-}
-
-.last-footer {
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 18px 0;
+  z-index: 3;
+  gap: 15px;
 }
 @media (max-width: 993px) {
-  .last-footer {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  .statistics-list {
+    padding-bottom: 50px;
+  }
+}
+@media (max-width: 767px) {
+  .statistics-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px 15px;
   }
 }
 
-.copyrights {
+.statistic-item {
+  text-align: center;
+  width: 176px;
+}
+.statistic-item .statistic-icon {
+  height: 58px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+.statistic-item .statistic-icon img {
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.statistic-item .statistic-hint {
   font-size: 16px;
-  font-weight: 700;
-  color: #fff;
+  font-weight: 400;
+  color: #1d1f1f;
   line-height: 1.5;
+  margin: 0 0 20px;
+}
+@media (max-width: 767px) {
+  .statistic-item .statistic-hint {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+}
+.statistic-item .statistic-value {
+  font-size: 34px;
+  font-weight: 700;
+  color: #004185;
+  line-height: 1.0298;
+  direction: ltr;
+  margin: 0 0 15px;
+}
+@media (max-width: 767px) {
+  .statistic-item .statistic-value {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+}
+.statistic-item .statistic-title {
+  font-size: 18px;
+  font-weight: 400;
+  color: #1d1f1f;
+  line-height: 1.667;
   margin: 0;
 }
-.copyrights a {
-  color: #36f4d2;
-  transition: all 0.3s ease-in-out;
-}
-.copyrights a:hover {
-  color: #fff;
-  text-decoration: underline;
-}
-.copyrights:last-of-type {
-  text-align: end;
-}
-@media (max-width: 993px) {
-  .copyrights:last-of-type {
-    text-align: center;
-    margin-top: 15px;
-  }
-}
-@media (max-width: 993px) {
-  .copyrights {
-    order: 2;
+@media (max-width: 767px) {
+  .statistic-item .statistic-title {
+    font-size: 16px;
   }
 }
 
-.socials {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
+.features-content {
+  position: relative;
+  z-index: 3;
+}
+
+.features-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 29px;
+}
+@media (max-width: 1199px) {
+  .features-list {
+    gap: 15px;
+  }
 }
 @media (max-width: 993px) {
-  .socials {
-    gap: 8px;
-    margin-bottom: 15px;
-    order: 1;
+  .features-list {
+    grid-template-columns: 1fr;
+    gap: 15px;
   }
 }
 
-.social {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 1px solid #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-  color: #fff;
-  transition: all 0.3s ease-in-out;
-}
-.social:hover {
+.feature-item {
+  border: 1px solid #eeeeee;
+  border-bottom: 5px solid #004185;
   background-color: #fff;
-  color: #3c8951;
+  border-radius: 15px;
+  padding: 55px 40px 15px;
+}
+@media (max-width: 993px) {
+  .feature-item {
+    width: 100%;
+    max-width: 370px;
+    margin: 0 auto;
+    padding: 30px 30px 15px;
+  }
+}
+.feature-item .feature-icon {
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 35px;
+}
+.feature-item .feature-icon img {
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.feature-item .feature-title {
+  font-size: 34px;
+  font-weight: 700;
+  color: #004185;
+  line-height: 1.0298;
+  text-align: center;
+  margin: 0 0 15px;
+}
+.feature-item .feature-description {
+  font-size: 18px;
+  color: #444444;
+  font-weight: 400;
+  line-height: 1.667;
+  text-align: center;
+  margin: 0;
 }/*# sourceMappingURL=main.css.map */
