--- a/css/main.css
+++ b/css/main.css
@@ -2694,4 +2694,39 @@ html[dir=ltr] .about-section .pattern {
   line-height: 1.667;
   text-align: center;
   margin: 0;
+}
+
+.page-content .categories-section {
+  padding: 60px 0 100px;
+}
+@media (max-width: 993px) {
+  .page-content .categories-section {
+    padding: 35px 0 50px;
+  }
+}
+
+.page-content .services-section {
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 85px 0 125px;
+}
+@media (max-width: 993px) {
+  .page-content .services-section {
+    padding: 35px 0 50px;
+  }
+}
+.page-content .services-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0.95;
+}
+.page-content .services-section .services-content {
+  position: relative;
+  z-index: 2;
 }/*# sourceMappingURL=main.css.map */
