--- a/css/main.css
+++ b/css/main.css
@@ -795,6 +795,23 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
   }
 }
 
+.ralated-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 30px;
+}
+@media (max-width: 1199px) {
+  .ralated-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 993px) {
+  .ralated-list {
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+}
+
 .news-item {
   display: flex;
   align-items: center;
@@ -943,6 +960,22 @@ html[dir=ltr] .swiper-tools .swiper-btn svg {
   }
   .news-row .news-item .news-category {
     margin-bottom: 7px;
+  }
+  .post-related .news-item .news-img {
+    width: 160px;
+    aspect-ratio: 160/123;
+  }
+  .post-related .news-item .news-summary {
+    padding-inline-start: 10px;
+  }
+  .post-related .news-item .number {
+    font-size: 14px;
+  }
+  .post-related .news-item .news-category {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 }
 
@@ -3312,4 +3345,178 @@ html[dir=ltr] .about-section .pattern {
   .news-page .news-section {
     padding: 30px 0 30px;
   }
+}
+
+@media (max-width: 993px) {
+  .page-content.post-page {
+    padding: 0;
+  }
+}
+
+.postPage-cover {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1510/643;
+}
+.postPage-cover img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.postPage-content {
+  background-color: #fbfbfb;
+  padding: 75px 0 50px;
+}
+@media (max-width: 1199px) {
+  .postPage-content {
+    padding: 50px 0 35px;
+  }
+}
+
+.post-content {
+  display: grid;
+  grid-template-columns: 1.8fr 1fr;
+  gap: 29px;
+}
+@media (max-width: 1199px) {
+  .post-content {
+    grid-template-columns: 1fr;
+  }
+}
+
+.post-description {
+  background-color: #fff;
+  border-radius: 15px;
+  overflow: hidden;
+  border: 2px solid #eeeeee;
+  padding: 24px 25px 21px;
+  border-bottom: 6px solid #004185;
+}
+@media (max-width: 767px) {
+  .post-description {
+    padding: 15px 15px 11px;
+  }
+}
+.post-description .post-numbers {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 0 30px;
+}
+@media (max-width: 767px) {
+  .post-description .post-numbers {
+    margin-bottom: 20px;
+  }
+}
+.post-description .post-number {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 700;
+  color: #1c1b1f;
+}
+.post-description .post-number img {
+  margin-inline-end: 6px;
+}
+@media (max-width: 767px) {
+  .post-description .post-number {
+    font-size: 14px;
+  }
+}
+.post-description .post-name {
+  font-weight: 700;
+  color: #000;
+  font-size: 32px;
+  line-height: 1.5625;
+  margin: 0 0 30px;
+}
+@media (max-width: 767px) {
+  .post-description .post-name {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+}
+.post-description .post-quote {
+  font-size: 18px;
+  color: #444444;
+  font-weight: 700;
+  line-height: 2.11112;
+  padding: 20px 19px;
+  padding-inline-start: 15px;
+  border-radius: 10px;
+  background-color: #f8f8f8;
+  border-inline-start: 5px solid #3c8951;
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .post-description .post-quote {
+    padding: 15px;
+    padding-inline-start: 11px;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+}
+.post-description .post-text {
+  padding: 0 24px;
+  font-size: 16px;
+  color: #444444;
+  font-weight: 700;
+}
+@media (max-width: 993px) {
+  .post-description .post-text {
+    padding: 0;
+  }
+}
+@media (max-width: 767px) {
+  .post-description .post-text {
+    font-size: 14px;
+  }
+}
+.post-description .post-text h3 {
+  color: #444444;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2.11112;
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .post-description .post-text h3 {
+    font-size: 16px;
+  }
+}
+.post-description .post-text p {
+  color: #444444;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 2.375;
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .post-description .post-text p {
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+}
+.post-description .post-text :last-child {
+  margin-bottom: 0;
+}
+
+.post-related .related-title {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: 700;
+  color: #1d1f1f;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+.post-related .related-title img {
+  width: 47px;
+  margin-inline-end: 15px;
 }/*# sourceMappingURL=main.css.map */
